--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <!-- FAVICON -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
   
   <!-- TITLE -->
-  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
+  <title>Limatek | Huddle landing page with alternating feature blocks</title>
 
   <!-- EXTERNAL CSS FILE -->
   <link rel="stylesheet" href="./css/index.css">
